@startuml ShapeHierarchy

interface Shape {
  + calcArea(): number
}

class Rectangle {
  - width: number
  - height: number
  + calcArea(): number
}

class Circle {
  - radius: number
  + calcArea(): number
}

class Client {
  - shape: Shape
}

Rectangle --|> Shape : implements
Circle --|> Shape : implements
Client --> Shape : has

@enduml